# hhhhh-bot

./: Procfile  README.md  config.json  main.py  message_metric.json  no_g_exception.py  prefixes.json  pyproject.toml  requirements.txt  time_utils.py  vars.py  webserver.py
.github/workflows/: no-prs.yml
AntiSpam/: static.py
cogs/: avatar.py  ban.py  cases.py  changelog.py  credits.py  dm.py  editsnipe.py  eval.py  fix.py  h.py  handler.py  hcount.py  help.py  hiddenping.py  info.py  invite.py  kick.py  maintenance.py  math.py  messagesmetrics.py  mimic.py  msgcount.py  ping.py  prefix.py  purge.py  react.py  reload.py  restart.py  safeeveryone.py  say.py  serverinfo.py  snipe.py  stop.py  sudo.py  thewar.py  unban.py  uptime.py  version.py  warn.py
