[tool.poetry]
name = "hhhhh-bot"
version = "1.0.0"
description = "The underlying code for hhhhh the Discord bot."
authors = ["Lunah#9358 on Discord"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
hurry = "^1.1"
"hurry.filesize" = "^0.9"
discord = "^1.0.1"
replit = "^2.0.0"
uptime = "^3.0.1"
DiscordUtils = "^1.2.4"
psutil = "^5.7.3"
corona-python = "^0.2.0"
numexpr = "^2.7.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
string2eval-discord = "^0.0.4"
discord-py-slash-command = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
